--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -9,6 +10,10 @@
     android:background="#fff"
     android:padding="20dp">
 
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
     <ImageView
         android:id="@+id/logoImage"
         android:layout_width="150dp"
@@ -21,7 +26,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/welcome"
-        android:textSize="60sp"
+        android:textSize="50dp"
         android:fontFamily="@font/open_sans_semibold"
         android:textColor="#000"
         android:transitionName="logo_text"/>
@@ -31,7 +36,8 @@
         android:layout_height="wrap_content"
         android:text="@string/sign_in_cont"
         android:textSize="20sp"
-        android:fontFamily="@font/open_sans_semibold"/>
+        android:fontFamily="@font/open_sans_semibold"
+        android:transitionName="logo_desc"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -45,6 +51,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/username"
             android:hint="@string/username"
+            android:transitionName="username_trans"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
@@ -56,6 +63,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/password"
             android:hint="@string/password"
+            android:transitionName="user_trans"
             app:passwordToggleEnabled="true"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
             <com.google.android.material.textfield.TextInputEditText
@@ -66,13 +74,14 @@
 
         <Button
             android:id="@+id/forgot"
-            android:layout_width="200dp"
+            android:layout_width="250dp"
             android:layout_height="wrap_content"
             android:background="#00000000"
             android:text="@string/forgot"
             android:layout_gravity="right"
             android:elevation="0dp"
-            android:layout_margin="5dp"/>
+            android:layout_margin="5dp"
+            android:transitionName="forg_trans"/>
         <Button
             android:id="@+id/login"
             android:layout_width="match_parent"
@@ -81,7 +90,8 @@
             android:textColor="#fff"
             android:text="@string/login"
             android:layout_marginTop="5dp"
-            android:layout_marginBottom="5dp"/>
+            android:layout_marginBottom="5dp"
+            android:transitionName="login_trans"/>
 
         <Button
             android:id="@+id/do_register"
@@ -91,11 +101,22 @@
             android:text="@string/no_account"
             android:layout_gravity="right"
             android:elevation="0dp"
-            android:layout_margin="5dp"/>
-
+            android:layout_margin="5dp"
+            android:transitionName="acc_trans"/>
 
 
     </LinearLayout>
-         
-        
+
+    <Button
+        android:id="@+id/change_lang"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        android:layout_marginBottom="5dp"
+        android:background="#00000000"
+        android:elevation="0dp"
+        android:text="@string/change_lang"
+        android:transitionName="land_trans"/>
 </LinearLayout>
+
+</ScrollView>
