--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -45,14 +45,14 @@
         android:layout_marginTop="20dp">
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/firstname"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/firstname"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:transitionName="username_trans">
 
-            <com.google.android.material.textfield.TextInputEditText
+            <EditText
+                android:id="@+id/firstname"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="text" />
@@ -61,14 +61,14 @@
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/lastname"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/lastname"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:transitionName="username_trans">
 
-            <com.google.android.material.textfield.TextInputEditText
+            <EditText
+                android:id="@+id/lastname"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="text"/>
@@ -77,7 +77,6 @@
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/user_type"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/user_type"
@@ -95,14 +94,14 @@
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/email"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:transitionName="username_trans">
 
-            <com.google.android.material.textfield.TextInputEditText
+            <EditText
+                android:id="@+id/email"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textEmailAddress"/>
@@ -111,14 +110,14 @@
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/phone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/phone"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:transitionName="username_trans">
 
-            <com.google.android.material.textfield.TextInputEditText
+            <EditText
+                android:id="@+id/phone"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="number"/>
@@ -127,7 +126,6 @@
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/password"
@@ -135,7 +133,8 @@
             app:passwordToggleEnabled="true"
             android:transitionName="username_trans">
 
-            <com.google.android.material.textfield.TextInputEditText
+            <EditText
+                android:id="@+id/password"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textPassword"/>
@@ -144,7 +143,6 @@
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/conf_pass"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/conf_pass"
@@ -152,14 +150,20 @@
             app:passwordToggleEnabled="true"
             android:transitionName="username_trans">
 
-            <com.google.android.material.textfield.TextInputEditText
+            <EditText
+                android:id="@+id/conf_pass"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textPassword"/>
 
 
         </com.google.android.material.textfield.TextInputLayout>
-
+        <ProgressBar
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/loading"
+            android:layout_marginTop="20dp"
+            android:visibility="gone"/>
 
     </LinearLayout>
 
@@ -170,7 +174,6 @@
             android:layout_marginTop="10dp"
             android:layout_marginBottom="5dp"
             android:background="#689999"
-            android:onClick="RegisterUser"
             android:text="@string/register"
             android:textColor="#fff" />
         <Button
