--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -14,6 +14,7 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
     <ImageView
+        android:id="@+id/logoImage"
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:src="@drawable/logogofix"
