--- a/app/src/main/res/layout/activity_mechanical_services.xml
+++ b/app/src/main/res/layout/activity_mechanical_services.xml
@@ -276,7 +276,9 @@
             android:text="@string/registerGar"
             android:textColor="#ffff"
             android:textSize="15sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:layout_marginRight="20dp"
+            android:layout_marginLeft="20dp"/>
 
 
     </LinearLayout>
