--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,4 +15,5 @@
     <color name="grey_2">#96a0a5</color>
     <color name="grey_3">#747575</color>
     <color name="blue">#06c</color>
+    <color name="colorWhite">#FFFFFF</color>
 </resources>
