--- a/app/src/main/res/layout/activity_register_rental.xml
+++ b/app/src/main/res/layout/activity_register_rental.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".RegisterShop">
+    tools:context=".RegisterRental">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -77,10 +77,10 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/regShop"
+                android:text="@string/rentalcar"
                 android:layout_marginTop="50dp"
                 android:textSize="18sp"
-                android:layout_marginLeft="30dp"/>
+                android:layout_marginLeft="10dp"/>
 
 
             <LinearLayout
@@ -94,7 +94,7 @@
                 <com.google.android.material.textfield.TextInputLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="@string/shopname"
+                    android:hint="@string/companyName"
                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                     android:transitionName="username_trans"
                     android:layout_marginTop="30dp">
@@ -124,32 +124,10 @@
 
                 </com.google.android.material.textfield.TextInputLayout>
 
-
-
-
                 <com.google.android.material.textfield.TextInputLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="@string/tin"
-                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                    android:transitionName="username_trans">
-
-                    <EditText
-                        android:id="@+id/tin"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:inputType="textEmailAddress"/>
-
-
-                </com.google.android.material.textfield.TextInputLayout>
-
-
-
-
-                <com.google.android.material.textfield.TextInputLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="@string/personcont"
+                    android:hint="@string/companyOwner"
                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                     android:transitionName="username_trans">
 
@@ -210,7 +188,7 @@
 
         </LinearLayout>
 
-        </LinearLayout>
+    </LinearLayout>
 
 
 
