--- a/app/src/main/res/layout/activity_rental_success.xml
+++ b/app/src/main/res/layout/activity_rental_success.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ShopSuccess"
+    tools:context=".RentalSuccess"
     android:background="#fff">
 
     <ImageView
@@ -35,7 +35,7 @@
         android:layout_marginRight="10dp"
         android:fontFamily="sans-serif-medium"
         android:gravity="center"
-        android:text="@string/thankshop"
+        android:text="@string/thankRental"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
